# qpdfpresenterconsole

./: .gitignore  BUILD.win32  CMakeLists.txt  LICENSE.txt  MacOSXBundleInfo.plist.in  QPdfPresenterConsole.desktop  QPdfPresenterConsole.icns  QPdfPresenterConsole.pro  QPdfPresenterConsole.txt  README.txt  app.h  app.h.in  beamer.annot  beamer.tex  freedesktopinhibiter.cpp  freedesktopinhibiter.h  helpdialog.cpp  helpdialog.h  main.cpp  mainscreenpdfview.cpp  mainscreenpdfview.h  mediaplayer.cpp  mediaplayer.h  mousemoveeventeater.cpp  mousemoveeventeater.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  osxinhibiter.cpp  osxinhibiter.h  parameters.cpp  parameters.h  pdfmodel.cpp  pdfmodel.h  presentationtimer.cpp  presentationtimer.h  presenter.cpp  presenter.h  presenterpdf.cpp  presenterpdf.h  (+19 more)
cmake/: FindLIBVLC.cmake  FindOSXCoreServices.cmake  mingw32-cross.cmake  mingw64-cross.cmake
debian/: README.Debian  README.source  changelog  control  copyright  files  watch
win32-g++-cross/: qmake.conf
